--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+:root {
+  --brown: #ca6c17
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
