--- a/src/Components/LandingPage/Intro/styles.css
+++ b/src/Components/LandingPage/Intro/styles.css
@@ -1,4 +1,11 @@
+.introContainer {
+    margin-bottom: 10rem;
+}
+
 @media only screen and (max-width: 900px) {
+    .introContainer {
+        margin-bottom: 20rem;
+    }
     .introTitle {
         font-size: 1em;
     }
