--- a/src/Components/LandingPage/Projects/styles.css
+++ b/src/Components/LandingPage/Projects/styles.css
@@ -1,18 +1,25 @@
-.proejctsGrid {
+.proejctGrid {
     grid-template-columns: 50% 50%;
     justify-items: center;
     max-width: none!important;
     /* margin: 0px; */
 }
-.projectsBox {
-    margin: 15px;
-    width: 100%;
-        width: -webkit-fill-available;
-    max-width: 1200px;
+.projectBox {
+    margin: 1rem;
+    margin-bottom: 2rem;
+    width: -webkit-fill-available;
+    max-width: 900px;
+}
+.projectCard:hover {
+    cursor: pointer;
 }
 
 @media only screen and (max-width: 900px) {
-    .proejctsGrid {
+    .proejctGrid {
         grid-template-columns: 100%;
+    }
+    .projectBox {
+        margin: 0;
+        margin-bottom: 4rem;
     }
 }
