--- a/src/Components/LandingPage/Projects/styles.css
+++ b/src/Components/LandingPage/Projects/styles.css
@@ -22,4 +22,7 @@
         margin: 0;
         margin-bottom: 4rem;
     }
+    .projectDescription, .projectKeywordBox {
+        color: #555555;
+    }
 }
