--- a/src/Components/LandingPage/Intro/styles.css
+++ b/src/Components/LandingPage/Intro/styles.css
@@ -4,15 +4,15 @@
 
 @media only screen and (max-width: 900px) {
     .introContainer {
-        margin-bottom: 20rem;
+        margin-bottom: 10rem;
     }
     .introTitle {
-        font-size: 1em;
+        font-size: 1.5rem!important;
     }
     .introTitleName {
-        font-size: 2.5em;
+        font-size: 3.5rem!important;
     }
     .introTitleDetail {
-        font-size: 1.5em;
+        font-size: 1.5rem!important;
     }
 }
